--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=2.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script type="text/javascript">
         window.onload = function() {
             const loadDate=new Date().toLocaleString();
             const hoursPassed = loadDate.slice(12, 14);
-            console.log(hoursPassed)
 
             if (hoursPassed > 18) return document.getElementById('greeting').innerHTML = "Good Evening, I'm Isaac Kenyon";
             if (hoursPassed > 12) return document.getElementById('greeting').innerHTML = "Good Afternoon, I'm Isaac Kenyon";
@@ -22,15 +21,15 @@
 <body>
     <header>
         <h1 id="greeting">Hey, I'm Isaac Kenyon</h1>
-        <aside>Also known as "@zayKenyon"</aside>
+        <aside>Also online as @zayKenyon</aside>
     </header>
 
         <h2>I am an aspiring Computer Scientist with an interest in Cybersecurity! 😁</h2>
         <p>UK based college student studying A-levels in Mathematics, Computer
-            Science and Film Studies (+EPQ). My notable projects, can be found
+            Science and Film Studies (+EPQ). My notable projects can be found
             on my <a href=https://github.com/zayKenyon target="_blank">GitHub</a>.
             Most of my work is done in Python and TS with newer experimentation
-            done in C.
+            in C.
         </p>
 
     <h2>Contact Me</h2>
@@ -38,7 +37,15 @@
         but you could also reach out over my <a href="https://discord.com/users/452793411401940995" target="_blank">Discord</a>;
         hell, you could even make a GitHub issue on my README if you really wanted — I'll see it.</p>
     <hr>
-    <p>Last updated on the 29<sup>th</sup> of March 2024</p>
-    <p>Redesign coming in the summer ™️</p>
+    <p>
+        Last updated on the 30<sup>th</sup> of May 2024 | Redesign coming
+        in the summer ™️
+    </p>
+    <p>
+        <a href="https://knyn.notion.site/Isaac-Kenyon-Habit-Tracker-f8811fe2bf684d82b99a140d9ad24a46"
+           target="_blank">
+            Habits
+        </a>
+    </p>
 </body>
 </html>
