--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script type="text/javascript">
         window.onload = function() {
@@ -16,36 +15,30 @@
 
     </script>
 
-    <title>Isaac Kenyon</title>
+    <title>ISAAC KENYON</title>
 </head>
-<body>
+<body style="text-align: center">
     <header>
-        <h1 id="greeting">Hey, I'm Isaac Kenyon</h1>
-        <aside>Also online as @zayKenyon</aside>
+        <h1 ><i id="greeting">Hey, I'm Isaac Kenyon</i></h1>
+        <aside>Online as @zayKenyon</aside>
     </header>
+    <br>
+    <img src="https://i.imgur.com/bGSsafo.jpg" style="height: 300px;"/>
 
-        <h2>I am an aspiring Computer Scientist with an interest in Cybersecurity! 😁</h2>
-        <p>UK based college student studying A-levels in Mathematics, Computer
-            Science and Film Studies (+EPQ). My notable projects can be found
-            on my <a href=https://github.com/zayKenyon target="_blank">GitHub</a>.
-            Most of my work is done in Python and TS with newer experimentation
-            in C.
-        </p>
+    <p>
+        Projects can be found on my <a href=https://github.com/zayKenyon target="_blank">GitHub</a>.
+        Currently comfortable with Python and JS/TS, moving towards C and lower levels.
+    </p>
 
-    <h2>Contact Me</h2>
-    <p>The easiest way to contact me would be over email (me&#64;knyn&#46;uk)</a>,
-        but you could also reach out over my <a href="https://discord.com/users/452793411401940995" target="_blank">Discord</a>;
-        hell, you could even make a GitHub issue on my README if you really wanted — I'll see it.</p>
-    <hr>
     <p>
-        Last updated on the 30<sup>th</sup> of May 2024 | Redesign coming
-        in the summer ™️
+        <a href="./academics.html">academics</a> |
+        <a href="./contact.html">contact</a> |
+        <a href="https://knyn.notion.site/Isaac-Kenyon-Habit-Tracker-f8811fe2bf684d82b99a140d9ad24a46" target="_blank">habits</a>
     </p>
-    <p>
-        <a href="https://knyn.notion.site/Isaac-Kenyon-Habit-Tracker-f8811fe2bf684d82b99a140d9ad24a46"
-           target="_blank">
-            Habits
-        </a>
-    </p>
+
+    <footer>
+        <hr>
+        Last updated on the 18<sup>th</sup> of August 2024
+    </footer>
 </body>
 </html>
