--- a/index.html
+++ b/index.html
@@ -20,25 +20,20 @@
 <body style="text-align: center">
     <header>
         <h1 ><i id="greeting">Hey, I'm Isaac Kenyon</i></h1>
-        <aside>Online as @zayKenyon</aside>
     </header>
     <br>
     <img src="https://i.imgur.com/bGSsafo.jpg" style="height: 300px;"/>
 
     <p>
-        Projects can be found on my <a href=https://github.com/zayKenyon target="_blank">GitHub</a>.
-        Currently comfortable with Python and JS/TS, moving towards C and lower levels.
-    </p>
-
-    <p>
-        <a href="./academics.html">academics</a> |
+        <a href="./about.html">about</a> |
+        <a href="./tech.html">tech</a> |
         <a href="./contact.html">contact</a> |
         <a href="https://knyn.notion.site/Isaac-Kenyon-Habit-Tracker-f8811fe2bf684d82b99a140d9ad24a46" target="_blank">habits</a>
     </p>
 
     <footer>
         <hr>
-        Last updated on the 18<sup>th</sup> of August 2024
+        Last updated on the 19<sup>th</sup> of August 2024
     </footer>
 </body>
 </html>
