--- a/tech.html
+++ b/tech.html
@@ -7,7 +7,7 @@
 <body style="text-align: center">
     <p>
         Projects can be found on my <a href=https://github.com/zayKenyon target="_blank">GitHub</a>.
-        Currently comfortable with Python and JS/TS, moving towards C and lower levels.
+        Comfortable with Python and JS/TS, moving towards C and lower levels.
     </p>
 </body>
 </html>
