--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 ><i id="greeting">Hey, I'm Isaac Kenyon</i></h1>
     </header>
 
-    <img src="https://i.imgur.com/bGSsafo.jpg" style="height: 300px;"/>
+    <img src="https://i.imgur.com/bGSsafo.jpg" style="height: 300px;" alt="Awesome Selfie"/>
 
     <p>
         <a href="./about.html">about</a> |
