--- a/tech.html
+++ b/tech.html
@@ -6,7 +6,8 @@
 </head>
 <body style="text-align: center">
     <p>
-        Projects can be found on my <a href=https://github.com/zayKenyon target="_blank">GitHub</a>.
+        Projects can be found on my <a href=https://github.com/zayKenyon target="_blank">
+        GitHub</a>.
         Comfortable with Python and JS/TS, moving towards C and lower levels.
     </p>
 </body>
