--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <img src="https://i.imgur.com/bGSsafo.jpg" style="height: 300px;" alt="Awesome Selfie"/>
 
     <p>
-        <a href="./about.html">about</a> //
-        <a href="./tech.html">tech</a> //
-        <a href="./blog/index.html">blog</a> //
-        <a href="./contact.html">contact</a> //
+        <a href="./about.html">about</a> |
+        <a href="./tech.html">tech</a> |
+        <a href="./writings/index.html">writings</a> |
+        <a href="./contact.html">contact</a> |
         <a href="https://knyn.notion.site/Isaac-Kenyon-Habit-Tracker-f8811fe2bf684d82b99a140d9ad24a46" target="_blank">habits</a>
     </p>
 </body>
