--- a/writings/boox.html
+++ b/writings/boox.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Boox</title>
+    <meta charset="UTF-8">
+    <title>Boox</title>
 </head>
 <body>
 <header>
-  <p>
-    title: Boox Tablet<br>
-    date: 2024-10-26 05:08<br>
-    type: guide
-  </p>
-  <hr>
+    <p>
+        title: Boox Tablet<br>
+        created: 2024-10-26 05:08<br>
+        last_modified: 2024-10-26 05:20<br>
+        type: guide
+    </p>
+    <hr>
 </header>
-  <p>
+<p>
     I am fortunate enough to often be stopped by strangers for a conversation.
-    When working, it's generally out of curiosity as to what I'm using to study.
-  </p>
+    When working, it's generally out of curiosity as to what I'm using to
+    study.
+</p>
 
-  <p>
+<p>
     It's the BOOX Go Tablet 10.3, it's an Android e-ink device with pen
     recognition.
-  </p>
+</p>
 
-  <h3>Resources</h3>
-  <p>
+<h3>Resources</h3>
+<p>
     I would recommend reviewing these sources if you're interested in
     picking up a similar device:
-  </p>
-  <ul>
+</p>
+<ul>
     <li>
-      JVScholz + his blogs<br>
-      https://youtu.be/C58_8sKeHe8<br>
-      https://jvscholz.com/blog/index.html
-      // https://jvscholz.com/blog/boox_go.html
+        JVScholz + his blogs<br>
+        https://youtu.be/C58_8sKeHe8<br>
+        https://jvscholz.com/blog/index.html
+        // https://jvscholz.com/blog/boox_go.html
     </li>
     <br>
     <li>
-      My Deep Guide<br>
-      https://youtu.be/M5tgGr4N7Ms
+        My Deep Guide<br>
+        https://youtu.be/M5tgGr4N7Ms
     </li>
     <br>
     <li>
-      Reddit<br>
-      r/eink
+        Reddit<br>
+        r/eink
     </li>
-  </ul>
+</ul>
 
-  <h3>Software</h3>
-  <p>
+<h3>Software</h3>
+<p>
     I'm a university student which means I need to do a lot of pre-reading in
     preparation for my lectures. I use the Calibre software to manage and
     organise the different types of documents I need: Textbooks, Lecture
     Slides, Exercise Sheets, and Problem Class Sheets.
-  </p>
+</p>
 </body>
 </html>
