--- a/writings/cereal-milk.html
+++ b/writings/cereal-milk.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>cereal milk</title>
+    <style>
+        body {
+            font-size: 16pt;
+            line-height: 1.4;
+            padding: 20px;
+            margin: 0 auto;
+            max-width: 750px;
+        }
+    </style>
 </head>
 <body>
 <header>
     <p>
         title: cereal milk<br>
-        date: 2024-10-25 03:54<br>
+        created_at: 2024-10-25 03:54<br>
+        last_modified: 2024-10-25 05:37<br>
         type: poetry
     </p>
     <hr>
