--- a/writings/CAT_S22.html
+++ b/writings/CAT_S22.html
@@ -19,7 +19,7 @@
     <p>
         title: CAT S22 'Dumbphone'<br>
         created: 2024-10-30 02:21<br>
-        last_modified: 2024-10-30 20:35<br>
+        last_modified: 2024-10-30 21:21<br>
         type: blog
     </p>
     <hr>
@@ -153,16 +153,16 @@
 <h2>Niche Points of Consideration</h2>
 <p>
     My smartphone used to be a major device in my two-factor authentication
-    system. When logging into a service, I might have to open an pp and approve
-    the login from there, or I might have to wait for a notification and tap
-    &#39;Confirm&#39;; actions that aren&#39;t possible on a dumbphone, before
-    I switched to the Cat, I was already in the midst of replacing phone auth
-    with a security token. I wouldn&#39;t recommend putting up a stink with
-    somebody demonstrating their persuasiveness in wanting your smartphone.
-    Since typically leaving my smartphone at home, I feel less weight on my
-    shoulders when walking around the city because the barrier of re-entry to
-    my accounts is low-to-unaffected (some services still primarily use SMS
-    auth 🙄).
+    system. When logging into a service, I might have to open an app and
+    approve the login from there, or I might have to wait for a notification
+    and tap &#39;Confirm&#39;; actions that aren&#39;t possible on a dumbphone,
+    before I switched to the Cat, I was already in the midst of replacing
+    phone auth with a security token. I wouldn&#39;t recommend putting up a
+    stink with somebody demonstrating their persuasiveness in wanting your
+    smartphone. Since typically leaving my smartphone at home, I feel less
+    weight on my shoulders when walking around the city because the barrier of
+    re-entry to my accounts is low-to-unaffected (some services still primarily
+    use SMS auth 🙄).
 </p>
 
 <h2>Resources</h2>
