tidy lifeguard description

--- a/about.html
+++ b/about.html
@@ -5,24 +5,29 @@
     <title>about</title>
 </head>
 <body style="text-align: center">
-    <p>
-        I am a Computer Science Undergraduate with a focus in Cybersecurity, studying at the <a href="https://www-users.york.ac.uk/~vvt520/">University of York</a>.
-        <br>
-        Awarded A*AB, A* in my A-levels: Computer Science, Film Studies, Mathematics,
-        and an <a href="https://en.wikipedia.org/wiki/Extended_Project_Qualification">
-        Extended Project Qualification</a>: "Can I make a school extra-curricular
-        communication and management app inspired by the interface of Discord?"
-    </p>
-    <p>
-        I am also a RLSS certified Lifeguard, holding an NPLQ (Gen. 10) and
-        AED certificate. Working as a Lifeguard has dramatically improved my
-        people skills, including de-escalating and finding solutions to
-        customers' problems, working in a team environment to manage set-ups
-        and set-downs whilst under heavy time pressure, and succinctly
-        communicating questions to staff and customers during loud sessions
-        through gestures. I have experience operating a moveable floor down to
-        370cm with accompanying springboards, and can effectively run a diving
-        session with heights of 5 and 10 metres.
-    </p>
+<p>
+    I am a Computer Science Undergraduate with a focus in Cybersecurity,
+    studying at the <a href="https://www-users.york.ac.uk/~vvt520/">University
+    of York</a>.
+    <br>
+    Awarded A*AB, A* in my A-levels: Computer Science, Film Studies,
+    Mathematics,
+    and an
+    <a href="https://en.wikipedia.org/wiki/Extended_Project_Qualification">
+        Extended Project Qualification</a>: "Can I make a school
+    extra-curricular
+    communication and management app inspired by the interface of Discord?"
+</p>
+<p>
+    I am also a RLSS certified Lifeguard, holding an NPLQ (Gen. 10) and
+    AED certificate. Working as a Lifeguard has dramatically improved my
+    people skills, including de-escalating and finding solutions to
+    customers' problems, working in a team environment to manage set-ups
+    and set-downs whilst under heavy time pressure, and succinctly
+    communicating with staff and customers during difficult conditions. I have
+    experience operating a moveable floor down to
+    370cm with accompanying springboards, and can effectively run a diving
+    session with heights of 5 and 10 metres.
+</p>
 </body>
 </html>
