resume, skip to GitHub

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <p>
         <a href="./about.html">about</a> |
-        <a href="./tech.html">tech</a> |
-        <a href="./writings/index.html">writings</a> |
+        <a href="https://github.com/zayKenyon">projects</a> |
+        <a href="https://drive.google.com/file/d/1Ngse-v4gA0edFvTr_ep_4W00cgSXi32H/view?usp=sharing">resume</a> |
         <a href="./contact.html">contact</a> |
         <a href="https://knyn.notion.site/Isaac-Kenyon-Habit-Tracker-f8811fe2bf684d82b99a140d9ad24a46" target="_blank">habits</a>
     </p>
